infrastructure/authentik/database.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: authentik-postgres
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik
      component: postgres
  template:
    metadata:
      labels:
        app: authentik
        component: postgres
    spec:
      priorityClassName: system-cluster-critical
      containers:
        - name: postgres
          image: postgres:17
          securityContext:
            runAsUser: 66534
            runAsGroup: 66534
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: wal
              mountPath: /var/lib/postgresql/wal
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: authentik-postgres-data
        - name: wal
          persistentVolumeClaim:
            claimName: authentik-postgres-wal
