infrastructure/authentik/redis.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: authentik-redis
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik
      component: redis
  template:
    metadata:
      labels:
        app: authentik
        component: redis
    spec:
      priorityClassName: system-cluster-critical
      containers:
        - name: redis
          image: redis:8.2.1-alpine
          command:
            - redis-server
            - /etc/redis/redis.conf
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: config
              mountPath: /etc/redis/redis.conf
              subPath: redis.conf
              readOnly: true
      volumes:
        - name: config
          secret:
            secretName: authentik-redis-config
