infrastructure/authentik/server.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: authentik-server
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik
      component: server
  template:
    metadata:
      labels:
        app: authentik
        component: server
    spec:
      priorityClassName: system-cluster-critical
      containers:
        - name: server
          image: ghcr.io/goauthentik/server:2025.8.3
          command:
            - server
          ports:
            - name: http
              containerPort: 80
            - name: metrics
              containerPort: 81
          volumeMounts:
            - name: media
              mountPath: /media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: authentik-media
