infrastructure/authentik/worker.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: authentik-worker
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik
      component: worker
  template:
    metadata:
      labels:
        app: authentik
        component: worker
    spec:
      priorityClassName: system-cluster-critical
      containers:
        - name: worker
          image: ghcr.io/goauthentik/server:2025.8.3
          args:
            - worker
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - name: http
              containerPort: 80
            - name: metrics
              containerPort: 81
          volumeMounts:
            - name: media
              mountPath: /media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: authentik-media
