infrastructure/authentik/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: authentik-redis
spec:
  selector:
    app: authentik
    component: redis
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
