infrastructure/authentik/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
spec:
  selector:
    app: authentik
    component: server
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: metrics
      port: 81
      targetPort: 81
