infrastructure/authentik/worker-service.yml
apiVersion: v1
kind: Service
metadata:
  name: authentik-worker
spec:
  selector:
    app: authentik
    component: worker
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: metrics
      port: 81
      targetPort: 81
